# SchemaWarden

./: .gitignore  CHANGELOG.md  Cargo.toml  cliff.toml  readme.md
.github/workflows/: ci.yml  clippy.yml  fmt.yml  release.yml
src/: fetcher.rs  main.rs  schema.rs  sql_normalise.rs  std_display.rs
src/diff/: display.rs  mod.rs  patch.rs  types.rs
tests/sql_normalise/: block_comments.expected.sql  block_comments.sql  line_comments.expected.sql  line_comments.sql  quoted.expected.sql  quoted.sql  stored_procedure.expected.sql  stored_procedure.sql  whitespace.sql
