[package]
name = "schema-warden"
description = "Schema drift detection for multi-tenant MSSQL databases"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }