[package]
name = "schema-warden"
description = "Schema drift detection for multi-tenant MSSQL databases"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
sqlparser = {version = "0.62"}
regex = {version="1"}
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "3"
dotenvy = "0.15.7"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
